Gem refactored to use Thor.

--- a/lib/templates/screen.tt
+++ b/lib/templates/screen.tt
@@ -1,4 +1,4 @@
-class ExampleScreen < AndroidScreenBase
+class <%= config[:name] %>Screen < <%= config[:platform] %>ScreenBase
 
   # The screen identificator
   #trait(:trait)                 { "* marked:'#{layout_name}'" }
