--- a/lib/templates/steps.tt
+++ b/lib/templates/steps.tt
@@ -1,5 +1,5 @@
-######### GIVEN #########
+######### <%= I18n.translate( :given ) %> #########
 
-######### WHEN #########
+######### <%= I18n.translate( :when ) %> #########
 
-######### THEN #########
+######### <%= I18n.translate( :then ) %> #########
