--- a/lib/templates/screen.tt
+++ b/lib/templates/screen.tt
@@ -1,13 +1,13 @@
 class <%= config[:name] %>Screen < <%= config[:platform] %>ScreenBase
 
-  # The screen identificator
+  # <%= I18n.translate 'comments.trait' %>
   #trait(:trait)                 { "* marked:'#{layout_name}'" }
 
-  # Declare all the elements of this screen
+  # <%= I18n.translate 'comments.elements' %>
   #element(:layout_name)         {'insert_layout_identificator'}
   #element(:button)              {'insert_button_identificator'}
 
-  # Declare all actions of this screen
+  # <%= I18n.translate 'comments.actions' %>
   # action(:touch_button) {
   #   touch("* marked:'#{button}'")
   # }
