--- a/lib/templates/steps.tt
+++ b/lib/templates/steps.tt
@@ -1,5 +1,5 @@
-######### <%= I18n.translate( :given ) %> #########
+######### <%= I18n.translate( :given ).upcase %> #########
 
-######### <%= I18n.translate( :when ) %> #########
+######### <%= I18n.translate( :when ).upcase %> #########
 
-######### <%= I18n.translate( :then ) %> #########
+######### <%= I18n.translate( :then ).upcase %> #########
