--- a/lib/templates/android_screen_base.tt
+++ b/lib/templates/android_screen_base.tt
@@ -69,12 +69,15 @@ class AndroidScreenBase < Calabash::ABase
     end
   end
 
-  def is_on_page? page_text
-
+  # Negation indicates that we want a page that doesn't has the message passed as parameter
+  def is_on_page? page_text, negation = ''
     begin
-      wait_for(:timeout => 5) { has_text? page_text }
+      wait_for(timeout: 5) { has_text? page_text }
+      # If negation is not nil, we should raise an error if this message was found on the view
+      raise "Unexpected Page. The page should not have: '${page_text}'" unless negation == ""
     rescue
-      raise "Unexpected Page. Expected was: '#{page_text}'"
+      # only raise exception if negation is nil, otherwise this is the expected behaviour
+      raise "Unexpected Page. Expected was: '#{page_text}'" if negation == ""
     end
   end
 
@@ -86,9 +89,30 @@ class AndroidScreenBase < Calabash::ABase
     end
   end
 
+  def touch_screen_element element, query = nil
+    query = "* id:'#{element}'" if query.nil?
+    wait_for(timeout: 5) { element_exists(query) }
+    touch(query)
+  end  
+
   def touch_element_by_index id, index
     wait_for(:timeout => 5) { element_exists("* id:'#{id}' index:#{index}") }
     touch("* id:'#{id}' index:#{index}")
+  end
+
+  def clear_text_field field
+    clear_text_in("android.widget.EditText id:'#{field}'}")
+  end
+
+  def select_date_on_date_picker date, date_picker_field_id
+    # Touch the date picker field
+    touch "* id:'#{date_picker_field_id}'"
+
+    # Setting the date
+    set_date 'DatePicker', date.year, date.month, date.day
+
+    # Clicking in the Done button
+    touch "* id:'button1'"
   end
 
 end
