--- a/lib/templates/screen.tt
+++ b/lib/templates/screen.tt
@@ -1,7 +1,7 @@
 class <%= config[:name] %>Screen < <%= config[:platform] %>ScreenBase
 
   # <%= I18n.translate 'comments.trait' %>
-  #trait(:trait)                 { "* marked:'#{layout_name}'" }
+  #trait(:trait)                 { "* <%= (config[:platform] == 'Android') ? 'id' : 'marked' %>:'#{layout_name}'" }
 
   # <%= I18n.translate 'comments.elements' %>
   #element(:layout_name)         {'insert_layout_identificator'}
@@ -9,7 +9,7 @@ class <%= config[:name] %>Screen < <%= config[:platform] %>ScreenBase
 
   # <%= I18n.translate 'comments.actions' %>
   # action(:touch_button) {
-  #   touch("* marked:'#{button}'")
+  #   touch("* <%= (config[:platform] == 'Android') ? 'id' : 'marked' %>:'#{button}'")
   # }
 
 end
