Added locales to the print screen method
The method that take prints from the emulators or devices is implemented
by Calabash and is only in english.
This commit adds a new base step that take prints and its regex can be
translated using the locale files.

--- a/lib/templates/base_steps.tt
+++ b/lib/templates/base_steps.tt
@@ -36,3 +36,7 @@ end
 <%= I18n.translate( :then ).capitalize %>(/^<%= I18n.translate "steps.should_see_page_that_contains" %>$/) do |page_text|
   @page.is_on_page? page_text
 end
+
+<%= I18n.translate( :then ).capitalize %>(/^<%= I18n.translate "steps.take_print" %>$/) do
+  screenshot_embed
+end
