--- a/lib/templates/base_steps.tt
+++ b/lib/templates/base_steps.tt
@@ -7,6 +7,11 @@ end
   @page.is_on_page? page_text
 end
 
+<%= I18n.translate( :given ).capitalize %>(/^<%= I18n.translate( "steps.been_in_page" ) %>$/) do |page_text|
+  @page = page( eval(page_text.capitalize.concat("Screen")) )
+  @page.is_showed
+end
+
 ######### <%= I18n.translate( :when ).upcase %> #########
 
 <%= I18n.translate( :when ).capitalize %>(/^<%= I18n.translate( "steps.drag_number_of_times" ) %>$/) do |direction, times|
@@ -39,4 +44,9 @@ end
 
 <%= I18n.translate( :then ).capitalize %>(/^<%= I18n.translate "steps.take_print" %>$/) do
   screenshot_embed
+end
+
+<%= I18n.translate( :then ).capitalize %>(/^<%= I18n.translate "steps.move_to_page" %>$/) do
+  @page = page( eval(page_text.split.map(&:capitalize).join('').concat("Screen")) )
+  @page.is_showed
 end
