Removed a lot of rubocop offenses

--- a/lib/templates/android_screen_base.tt
+++ b/lib/templates/android_screen_base.tt
@@ -109,8 +109,8 @@ class AndroidScreenBase < Calabash::ABase
     begin
       wait_for(timeout: 5) { element_exists(query) }
       touch(query)
-    rescue
-      raise "Element #{element} not found on the view"
+    rescue => e
+      raise "Element #{element} not found on the view\nError Message: #{e.message}"
     end
   end
 
