--- a/lib/templates/ios_screen_base.tt
+++ b/lib/templates/ios_screen_base.tt
@@ -152,8 +152,8 @@ class IOSScreenBase < Calabash::IBase
     begin
       wait_for(timeout: 5) { element_exists(query) }
       touch query
-    rescue
-      raise "Element '#{element}' not found on the view"
+    rescue => e
+      raise "Element #{element} not found on the view\nError Message: #{e.message}"
     end
   end
 
