--- a/lib/templates/screen.tt
+++ b/lib/templates/screen.tt
@@ -3,11 +3,11 @@ class <%= config[:name] %>Screen < <%= config[:platform] %>ScreenBase
   # trait(:trait)                 { "* <%= (config[:platform] == 'Android') ? 'id' : 'marked' %>:'#{layout_name}'" }
 
   # <%= I18n.translate 'comments.elements' %>
-  # element(:layout_name)         { 'insert_layout_identificator' }
-  # element(:button)              { 'insert_button_identificator' }
+  # element(:layout_name)         { pending 'Insert layout identificator' }
+  # element(:button)              { pending 'Insert button identificator' }
 
   # <%= I18n.translate 'comments.actions' %>
-  # action(:touch_button) {
+  # action(:touch_button) do
   #   touch("* <%= (config[:platform] == 'Android') ? 'id' : 'marked' %>:'#{button}'")
-  # }
+  # end
 end
