--- a/lib/templates/ios_screen_base.tt
+++ b/lib/templates/ios_screen_base.tt
@@ -131,6 +131,9 @@ class IOSScreenBase < Calabash::IBase
   # Negation indicates that we want a page that doesn't has
   # the message passed as parameter
   def is_on_page?(page_text, negation = '')
+  fail 'Unexpected Page. Enter with a valid message' if
+       page_text.to_s == ''
+
     should_not_have_exception = false
     should_have_exception = false
     begin
